--- a/src/components/EditProfile/EditProfile.css
+++ b/src/components/EditProfile/EditProfile.css
@@ -1,5 +1,5 @@
 .editprofile {
-  max-width: 410px;
+  max-width: 396px;
   margin: 150px auto 0;
   display: flex;
   flex-direction: column;
@@ -49,10 +49,10 @@
   font-weight: 500;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 456px) {
 
   .editprofile {
-    max-width: 260px;
+    width: calc(100% - 60px);
     margin: auto;
     display: flex;
     flex-direction: column;
