--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -60,7 +60,7 @@
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 456px) {
   .loginform {
     margin: 56px auto 30px;
   }
@@ -75,7 +75,7 @@
   }
 
   .loginform__container {
-    max-width: 260px;
+    width: calc(100% - 60px);
   }
 
   .loginform__question-text {
