--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -29,12 +29,20 @@
   box-sizing: border-box;
   border-width: 0px 0px 0px;
   cursor: pointer;
-
+  padding: 0;
   font-size: 10px;
   line-height: 9px;
   font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
   font-style:  normal;
   font-weight: 400;
+}
+
+.moviescard__save-button:hover {
+  opacity: 80%;
+}
+
+.moviescard__save-button_active {
+  visibility: visible;
 }
 
 .moviescard__saved-marker {
@@ -49,7 +57,11 @@
   background-image: url(../../images/saved-marker.svg);
   background-repeat: no-repeat;
   background-position: center;
-  cursor: pointer;
+  cursor: pointer;  
+}
+
+.moviescard__saved-marker_active {
+  visibility: visible;
 }
 
 .moviescard__delete-movie {
@@ -66,6 +78,13 @@
   background-position: center;
   margin: 0;
   cursor: pointer;
+}
+.moviescard__delete-movie:hover {
+  opacity: 80%;
+}
+
+.moviescard__delete-movie_active {
+  visibility: visible;
 }
 
 .moviescard__info {
@@ -112,7 +131,7 @@
 
   .moviescard__image {
     height: 190px;
-  }
+   }
 }
 
 @media screen and (max-width: 492px) {
