--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -3,12 +3,17 @@
 	margin: auto;
 	padding-top: 70px;
 	padding-bottom: 28px;
+}
 
+.moviescardlist__cards {
 	display:grid;
 	justify-content:center;
 	grid-template-columns: repeat(auto-fit, minmax(360px, 360px));
 	column-gap: 30px;
 	row-gap: 60px;
+	list-style-type: none;
+	padding: 0;
+	margin: 0;
 }
 
 @media screen and (max-width: 768px) {
@@ -17,12 +22,14 @@
 		margin: auto;
 		padding-top: 70px;
 		padding-bottom: 0;
+	}
 
+	.moviescardlist__cards {
 		display:grid;
 		justify-content:center;
 		grid-template-columns: repeat(auto-fit, minmax(339px, 339px));
 		column-gap: 30px;
-		row-gap: 47px;
+		row-gap: 47px;		
 	}
 }
 
@@ -31,11 +38,13 @@
 		width: calc(100% - 20px);
 		margin: auto;
 		padding-top: 40px;
-		padding-bottom: 0;
+		padding-bottom: 0;		
+	}
 
+	.moviescardlist__cards {
 		display:grid;
 		justify-content:center;
 		grid-template-columns: repeat(auto-fit, minmax(300px, 300px));
-		row-gap: 36px;
+		row-gap: 36px;	
 	}
 }
