--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -28,6 +28,11 @@
 
 }
 
+.searchform__search-field:focus {
+  border: 1px solid rgb(70, 70, 70);
+  
+}
+
 .searchform__button-container {
   border: 0;
   padding: 0;
