--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -2,6 +2,19 @@
   display: none;
 }
 
+.movies__errormsg {
+  display: flex;
+  justify-content: center;
+	
+  color: #EE3465;
+  font-size: 20px;
+  line-height: 24px;
+  font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
+  font-style:  normal;
+  font-weight: 400;
+
+}
+
 @media screen and (max-width: 768px) {
 	.movies__line {
 		display: block;
