--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -11,7 +11,8 @@
 .searchform__input-container {
   border: 0;
   padding: 0;
-  margin: 0;  
+  margin: 0;
+  position: relative;  
 }
 
 .searchform__search-field {
@@ -25,7 +26,15 @@
   border-width: 0px 0px 0px;
   padding: 0;
   padding-left: 20px;
+}
 
+.searchform__error {
+  color: #EE3465;
+  font-size: 12px;
+  line-height: 14px;
+  position: absolute;
+  top: 60px;
+  left: 5px;
 }
 
 .searchform__search-field:focus {
