--- a/src/components/FormInput/FormInput.css
+++ b/src/components/FormInput/FormInput.css
@@ -41,7 +41,7 @@
 .forminput__error-name {
   position: absolute;
   left: 0;
-  top: 58px;
+  top: 55px;
 }
 
 .forminput__error-email {
@@ -55,6 +55,36 @@
   left: 0;
   top: 208px;
 }
+
+/* .forminput__error-name-register {
+  position: absolute;
+  left: 0;
+  top: 55px;
+}
+
+.forminput__error-email-register {
+  position: absolute;
+  left: 0;
+  top: 133px;
+}
+
+.forminput__error-password-register {
+  position: absolute;
+  left: 0;
+  top: 208px;
+}
+
+.forminput__error-email-login {
+  position: absolute;
+  left: 0;
+  top: 133px;
+}
+
+.forminput__error-password-login {
+  position: absolute;
+  left: 0;
+  top: 208px;
+} */
 
 @media screen and (max-width: 456px) {
   .forminput {
