--- a/src/components/InfoToolTip/InfoToolTip.css
+++ b/src/components/InfoToolTip/InfoToolTip.css
@@ -1,14 +1,4 @@
 .infotool {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	width: 100%;
-	height: 100%;
-	position: fixed;
-	background-color: rgb(0, 0, 0, 0.3);
-	top: 0;
-	left: 0;
-
 	z-index: 2;
 	opacity: 0;
 	visibility: hidden;
@@ -25,21 +15,19 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-  width: 520px;
-	height: 320px;
 	background-color: #202020;
 	position: relative;
 }
 
 .infotool__heading {
-  color: #fff;
+  color: #EE3465;
   font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
   font-style:  normal;
   font-weight: 500;
-  font-size: 30px;
-  line-height: 36px;
-  margin: 40px 0 40px;
-	max-width: 360px;
+  font-size: 14px;
+  line-height: 16px;
+  margin: 10px 0 10px;
+	max-width: 100%;
 	text-align: center;
 }
 
