исправли баги, вывел ошибки

--- a/src/components/FormInput/FormInput.css
+++ b/src/components/FormInput/FormInput.css
@@ -16,7 +16,7 @@
   padding: 0;
   padding-top: 5px;
   padding-bottom: 10px;
-  margin-bottom: 24px;
+  margin-bottom: 5px;
   font-size: 14px;
   line-height: 17px;
   font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
@@ -39,52 +39,16 @@
 }
 
 .forminput__error-name {
-  position: absolute;
-  left: 0;
-  top: 55px;
+  min-height: 24px;
 }
 
 .forminput__error-email {
-  position: absolute;
-  left: 0;
-  top: 133px;
+  min-height: 24px;
 }
 
 .forminput__error-password {
-  position: absolute;
-  left: 0;
-  top: 208px;
+  min-height: 24px;
 }
-
-/* .forminput__error-name-register {
-  position: absolute;
-  left: 0;
-  top: 55px;
-}
-
-.forminput__error-email-register {
-  position: absolute;
-  left: 0;
-  top: 133px;
-}
-
-.forminput__error-password-register {
-  position: absolute;
-  left: 0;
-  top: 208px;
-}
-
-.forminput__error-email-login {
-  position: absolute;
-  left: 0;
-  top: 133px;
-}
-
-.forminput__error-password-login {
-  position: absolute;
-  left: 0;
-  top: 208px;
-} */
 
 @media screen and (max-width: 456px) {
   .forminput {
