--- a/src/components/EditProfile/EditProfile.css
+++ b/src/components/EditProfile/EditProfile.css
@@ -21,7 +21,8 @@
   padding: 0;
   margin: 0;
   min-height: 266px;
-  position: relative;
+  display: flex;
+  flex-direction: column;
 }
 
 .edit-profile__form {
