--- a/src/components/FormLogin/FormLogin.css
+++ b/src/components/FormLogin/FormLogin.css
@@ -1,13 +1,11 @@
-.formlogin {
-  
-}
 
 .formlogin__input-container {
   border: 0;
   padding: 0;
   margin: 0;
   min-height: 266px;
-  position: relative;
+  display: flex;
+  flex-direction: column;
 }
 
 .formlogin__handlers {
