--- a/src/components/FormRegister/FormRegister.css
+++ b/src/components/FormRegister/FormRegister.css
@@ -3,7 +3,8 @@
     padding: 0;
     margin: 0;
     min-height: 266px;
-    position: relative;
+    display: flex;
+    flex-direction: column;
   }
   
   .formregister__handlers {
