--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -77,6 +77,8 @@
   background-position: center;
   margin: 0;
   cursor: pointer;
+  box-sizing: border-box;
+  border-width: 0px 0px 0px;
 }
 .moviescard__delete-movie:hover {
   opacity: 80%;
