--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -56,7 +56,10 @@
   background-color: #EE3465;
   background-image: url(../../images/saved-marker.svg);
   background-repeat: no-repeat;
-  background-position: center;  
+  background-position: center; 
+  cursor: pointer;
+  box-sizing: border-box;
+  border-width: 0px 0px 0px; 
 }
 
 .moviescard__saved-marker_active {
@@ -99,6 +102,7 @@
 }
 
 .moviescard__name {
+  max-width: 250px;
   color: #fff;
   font-size: 13px;
   line-height: 16px;
@@ -142,5 +146,9 @@
 
   .moviescard__info {
     margin-top: 16px;
+  }
+
+  .moviescard__name {
+    max-width: 240px;
   }
 }
