--- a/src/index.css
+++ b/src/index.css
@@ -46,6 +46,7 @@
 @import url(./components/MoreMovies/MoreMovies.css);
 
 @import url(./components/Profile/Profile.css);
+@import url(./components/ProfileUpdatedMsg/ProfileUpdatedMsg.css);
 @import url(./components/EditProfile/EditProfile.css);
 @import url(./components/EditProfileErrorField/EditProfileErrorField.css);
 
