--- a/src/components/EditProfileErrorField/EditProfileErrorField.css
+++ b/src/components/EditProfileErrorField/EditProfileErrorField.css
@@ -7,11 +7,13 @@
 
 .editProfileErrorField_opened {
   opacity: 1;
-	visibility: visible;
-	transition: visibility .3s, opacity .3s linear;
+  visibility: visible;
+  transition: visibility .3s, opacity .3s linear;
 }
 
 .editProfileErrorField__container {
+	display: flex;
+	flex-direction: row;
 	justify-content: center;
 	align-items: center;
 	background-color: #202020;
@@ -25,6 +27,20 @@
   font-size: 14px;
   line-height: 16px;
   margin: 10px 0 10px;
-	max-width: 100%;
-	text-align: center;
+  max-width: 100%;
+  text-align: center;
+}
+
+.editProfileErrorField__closed-infotool {
+   width: 40px;
+   height: 20px;
+   margin-left: 20px;
+   color:#fff;	
+   background-color: #202020;
+   border: 1px solid #323232;
+   font-size: 12px;
+   line-height: 14px;
+   cursor: pointer;
+   box-sizing: border-box;
+   border-radius: 3px;
 }
